fixed add button messing up on smaller screens

--- a/client/app/SearchPage/SearchPage.scss
+++ b/client/app/SearchPage/SearchPage.scss
@@ -42,6 +42,7 @@
   left: 15%;
   font-size: 16px;
   margin: 0;
+  width: 65%;
 }
 
 .song_results {
